Bug 62402 - 3D Chart Walls turned 90° clockwise
Summary: 3D Chart Walls turned 90° clockwise
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.1.0.0.beta2 target:4.2.0
Keywords: bibisected, regression
: 62971 62983 64757 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-03-16 09:09 UTC by Cor Nouws
Modified: 2015-12-17 07:13 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
spreadsheet with rotated 3D chart (20.82 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-03-16 09:09 UTC, Cor Nouws
Details
Bibisect log (3.10 KB, text/plain)
2013-05-26 17:41 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2013-03-16 09:09:26 UTC
Created attachment 76602 [details]
spreadsheet with rotated 3D chart

spreadsheet with some data
create chart
preview shows OK
now choose 3D version
 > the chart rotates 90 degr...

see attached testfile
Comment 1 Cor Nouws 2013-03-16 09:12:04 UTC
is OK in 4.0.2rc1
Comment 2 Markus Mohrhard 2013-03-18 02:03:50 UTC
@Fridrich: Sounds like the problem you mentioned. I'll put you in CC and use that bug to track the problem.
Comment 3 Rainer Bielefeld Retired 2013-04-01 10:52:00 UTC
*** Bug 62983 has been marked as a duplicate of this bug. ***
Comment 4 Rainer Bielefeld Retired 2013-04-01 11:06:57 UTC
Also 3D charts in existing documents from older LibO versions show that problem when document opened in Master.

Already [Reproducible] with Version 4.1.0.0.alpha0+ (Build ID: 21171e0a7fd3aaa14a45a72bfecbc2b2a4ad767), TinderBox: Win-x86@6, Branch:master, pulltime: 2013-03-03_03:36:03, on Win7 64bit

Was still ok with Server installation of  "Version 4.1.0.0.alpha0+ (Build ID: 576da8db5577f84d9c7e0e40ef3e166a7938c98) TinderBox: Win-x86@6, Branch:master, Pull Time: 2013-02-11_23:54:45" ENGLISH UI / German Locale  on German WIN7 Home Premium (64bit) with own separate User Profile.
Comment 5 Markus Mohrhard 2013-04-08 18:58:56 UTC
*** Bug 62971 has been marked as a duplicate of this bug. ***
Comment 6 Markus Mohrhard 2013-05-05 23:53:29 UTC
This seems to happen right now for all 3D objects and not only in charts. The problems is also a pure viewing problem as the representation in chart2 is still correct.
Comment 7 Jorendc 2013-05-19 12:36:49 UTC
*** Bug 64757 has been marked as a duplicate of this bug. ***
Comment 8 Joel Madero 2013-05-26 06:57:10 UTC
Assigning myself as QA so I remember to bibisect tomorrow.
Comment 10 Joel Madero 2013-05-26 23:01:01 UTC
Thanks Joren! My bibisect package is still downloading.....
Comment 11 Jorendc 2013-05-27 10:55:59 UTC
Narrowed it down further: 

# bad: [f290bc783553abf0290369e57cef4bb2de8b3252] don't copy the mozilla include files, use it in place
# good: [568b3bdb9b20bd2de68dc2760b69594a9b52ba43] remove duplicate line
git bisect start 'f290bc783553abf0290369e57cef4bb2de8b3252' '568b3bdb9b20bd2de68dc2760b69594a9b52ba43'
# bad: [dd3e879cfdacbc8b9fff7556ae2d8698a22e9235] remove some trivial duplicates
git bisect bad dd3e879cfdacbc8b9fff7556ae2d8698a22e9235
# good: [8a4f49485495155ff241e449c94f5700e3226bc6] odk: fix typo
git bisect good 8a4f49485495155ff241e449c94f5700e3226bc6
# good: [f5305a942bf4c685474c8cd7d5aa6301f5abf75c] RTL_CONSTASCII_USTRINGPARAM and ::rtl:: removals
git bisect good f5305a942bf4c685474c8cd7d5aa6301f5abf75c
# good: [c66e2c4836fa3780c5cabbb511968557121d5cc1] mozabdrv: add dependency to internal mozilla
git bisect good c66e2c4836fa3780c5cabbb511968557121d5cc1

So this is our 1-commit range: http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=c66e2c4836fa3780c5cabbb511968557121d5cc1..dd3e879cfdacbc8b9fff7556ae2d8698a22e9235

-> http://cgit.freedesktop.org/libreoffice/core/commit/?id=dd3e879cfdacbc8b9fff7556ae2d8698a22e9235

... which is odd ... but true :s
Comment 12 Commit Notification 2013-05-27 11:14:03 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6b715afe5fac84078677ce2227d2cc783f9ab243&h=libreoffice-4-1

reintroduce removed line, fdo#62402


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2013-05-27 11:14:40 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=17f21e6bcc5283c5485cc42344610e8125547c0f

reintroduce removed line, fdo#62402



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Markus Mohrhard 2013-05-27 11:17:42 UTC
Thanks to Joren's amazing bibisecting and bisecting work we could finally fix this one.
Comment 15 Robinson Tryon (qubit) 2015-12-17 07:13:37 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]