reintroduce removed line, fdo#62402

This line was removed with dd3e879cfdacbc8b9fff7556ae2d8698a22e9235 but
is needed. Special thanks to Joren for bibisecting and bisecting.

Change-Id: Id2b3de4098db75571006e6e62b77efe8c491b06f